me olvide el enunciado  :vv

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ EXEC Pa_Pel_Gen_Form 'romance', '2D';</pre>
         <div class="consulta">
             <h3>Consulta 4</h3>
             <button class="btn-enunciado">Mostrar Enunciado</button>
-            <p class="enunciado hidden">Nos muestra la recaudación por película, facilitando el análisis económico y la identificación de títulos más rentables.</p>
+            <p class="enunciado hidden">Muestra cada cine con su ubicación, la recaudación total (entradas + productos), la recaudación específica por películas y por productos, además de indicar cuál fue la película más vista y el producto más vendido en cada uno.</p>
           <br> </br>
   <pre>SELECT 
     c.Nombre_Cine AS [Cine],
