--- a/index.html
+++ b/index.html
@@ -281,18 +281,51 @@ ORDER BY [Recaudacion Total] DESC;</pre>
             <div class="resultado"></div>
         </div>
 
-        <div class="consulta">
+        <div class="consulta" id="consulta-5">
             <h3>Consulta 5</h3>
             <button class="btn-enunciado">Mostrar Enunciado</button>
-            <p class="enunciado hidden"></p>
-           <br> </br>
-            <pre>SELECT 
-    Cliente,
-    COUNT(*) AS Visitas 
-FROM Ventas 
-GROUP BY Cliente 
-ORDER BY Visitas DESC;</pre>
-            <button class="btn-ejecutar" data-img="imagen5.jpg">EJECUTAR</button>
+            <p class="enunciado hidden">Se quiere restar el stock de algun producto una vez se realiza una compra.</p>
+            <br>
+            </br>
+            <pre>CREATE OR ALTER TRIGGER trg_ActualizarStockProductos_After
+ON detalle_factura_productos
+AFTER INSERT
+AS
+BEGIN
+    UPDATE p
+    SET Stock = p.Stock - i.cantidad
+    FROM productos p
+    INNER JOIN inserted i ON p.id_Producto = i.id_Producto;
+
+    IF EXISTS (
+        SELECT 1
+        FROM productos p
+        INNER JOIN inserted i ON p.id_Producto = i.id_Producto
+        WHERE p.Stock < 0
+    )
+    BEGIN
+        RAISERROR ('ERROR DE INVENTARIO: Stock insuficiente para completar la transacción. Venta revertida.', 16, 1);
+        ROLLBACK TRANSACTION;
+        RETURN;
+    END
+
+END;</pre>
+
+            <div class="invoice-menu">
+                <div class="stock-display">Stock de pochoclos: <span id="stock-pochoclos">20</span></div>
+                <label for="cantidad-pochoclos">Cantidad a vender:</label>
+                <input type="number" id="cantidad-pochoclos" min="1" value="1">
+                <button id="add-to-invoice" class="btn-invoice">Agregar a factura</button>
+                <button id="finalize-invoice" class="btn-invoice">Finalizar factura</button>
+
+                <div id="invoice-area">
+                    <h4>Factura (items)</h4>
+                    <ul id="invoice-list"></ul>
+                </div>
+
+                <div id="error-box" class="error-message hidden"></div>
+            </div>
+
             <div class="resultado"></div>
         </div>
     </section>
@@ -306,7 +339,7 @@ ORDER BY Visitas DESC;</pre>
         
         <ul class="features">
             <li>
-                <h3> Reglas de Negocio Real</h3>
+                <h3> Capacidad de análisis</h3>
                  <p>
                 No se trata solo de guardar datos, sino de entenderlos.  
                 Con Cine DB podés analizar resultados al instante: 
@@ -333,7 +366,15 @@ ORDER BY Visitas DESC;</pre>
         y qué producto es el más vendido (<strong>Consulta 4</strong>).  
         Todo está ahí, listo para convertir datos en información y luego en <strong>estrategia.</strong>
              </p>
+
             </li>
+
+            <li>   <h3> Reglas de Negocio</h3>
+             <p>
+        La integridad de los datos es muy importante a nuestro criterio, y por eso implementamos reglas de negocio integradas <strong> (Consulta 5)</strong>.
+        Es decir, las políticas y restricciones del cine se aplicarán automáticamente, así asegurando que los datos sean lo más cercanos a la realidad.
+             </p>
+</li>
         </ul>
         <p class="intro-text" style="font-weight: 700; margin-top: 30px;">
             Cine DB no es solo una base de datos. Es su socio estratégico
